--- a/_static/exercise.css
+++ b/_static/exercise.css
@@ -11,28 +11,34 @@
 * Exercise *
 *********************************************/
 div.exercise {
-  border-color: var(--note-border-color);
+	padding-left: 0rem !important;
+	padding-right: 0rem !important;
+  border-left: .2rem solid var(--note-border-color);
   background-color: var(--note-title-color);
 }
 
 div.exercise p.admonition-title {
+	padding: .6rem .4rem .6rem 1.6rem;
   background-color: var(--note-title-color);
 }
 
 /* Remove content box */
 div.exercise p.admonition-title::before {
-  content: "\f303";
+	content: none;
 }
 
 /*********************************************
 * Solution *
 *********************************************/
 div.solution{
-  border-color: var(--grey-border-color);
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
+  border-left: .2rem solid var(--grey-border-color);
   background-color: none;
 }
 
 div.solution p.admonition-title {
+  padding: .6rem .4rem .6rem 1.6rem;
   background-color: transparent;
   text-decoration: none;
 }
